# fastapi-vike-starter

./: .env.example  .gitignore  CLAUDE.md  README.md  codecov.yml  render.yaml  setup.sh
.claude/skills/: alembic-migrations.md  react-testing.md  render-deployment.md  vike-patterns.md
.github/workflows/: ci.yml
server/: alembic.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 0001_initial_schema.py  0002_create_items_table.py  9da51c886679_create_users_table.py  a1b2c3d4e5f6_add_email_verified_to_users.py  b2c3d4e5f6a7_create_verification_tokens.py  c3d4e5f6a7b8_split_name_into_first_last.py  d4e5f6a7b8c9_drop_slack_user_id.py
server/app/: config.py  database.py  dependencies.py  limiter.py  main.py
server/app/api/: auth.py  health.py  items.py  router.py  users.py
server/app/db/: migration_helpers.py
server/app/middleware/: errors.py  logging.py  rate_limit.py
server/app/models/: __init__.py  base.py  item.py  user.py  verification_token.py
server/app/schemas/: auth.py  item.py  user.py
server/app/services/: auth_service.py  base_service.py  email_service.py  item_service.py  token_service.py  user_service.py
server/app/templates/: reset_password.html  verify_email.html
server/app/utils/: exceptions.py  pagination.py  query.py
server/app/workers/: celery_app.py  monitoring_worker.py  registry.py
server/scripts/: seed.py  stamp_if_needed.py
server/tests/: conftest.py
server/tests/integration/: test_auth_api.py  test_auth_api_edges.py  test_error_handling.py  test_error_sanitization.py  test_health_api.py  test_items_api.py  test_lifespan.py  test_password_reset_flow.py  test_rbac.py  test_registration_flow.py
server/tests/unit/: test_auth_service.py  test_auth_service_edges.py  test_base_service.py  test_base_service_edges.py  test_config.py  test_cron_registry.py  test_database.py  test_email_service.py  test_email_service_edges.py  test_error_sanitization.py  test_errors.py  test_exceptions.py  test_migration_helpers.py  test_pagination.py  test_token_service.py
web/: .gitignore  README.md  components.json  package-lock.json  package.json  server.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
web/components/layout/: Sidebar.tsx
web/hooks/: useAuth.ts
web/lib/: analytics.ts  app-config.ts  cookies.ts  query-keys.ts  sentry.ts  sse-client.ts  types.ts
web/pages/: +Head.tsx  +Layout.tsx  +config.ts  tailwind.css
web/pages/_error/: +Page.tsx
web/pages/app/: +Layout.tsx  +guard.ts
web/services/: auth.ts  client.ts  items.ts
web/stores/: auth-store.ts
web/tests/: api-client.test.ts  app-layout.test.tsx  auth-store.test.ts  cookies.test.ts  dashboard.test.tsx  forgot-password-page.test.tsx  guards.test.ts  items-service.test.ts  login-page.test.tsx  pages.test.tsx  root-layout.test.tsx  setup.ts  sidebar.test.tsx  utils.test.ts
(+28 files in other folders)
